name:                noodles
version:             0
synopsis:            Cuttable sequence
description:         Cuttable sequence
homepage:            https://github.com/fumieval/noodles#readme
license:             BSD3
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          fumiexcel@gmail.com
copyright:           2017 Fumiaki Kinoshita
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Noodle
  build-depends:       base >= 4.7 && < 5, vector-space, fingertree
  default-language:    Haskell2010

test-suite noodles-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , noodles
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fumieval/noodles
